# COMP-farmed

./: .gitignore  README.md  comp_farmed.ipynb  comp_farmed.py  lens.json  local.env  pyproject.toml
